--- a/components/styles/kanban_styles.css
+++ b/components/styles/kanban_styles.css
@@ -44,7 +44,6 @@
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
-  flex-grow: 1 1;
   align-items: center;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
